Added the transfer form. It currently uses reactive forms to store the entered inputs as an object.

--- a/src/app/card-container/card-container.component.html
+++ b/src/app/card-container/card-container.component.html
@@ -2,8 +2,10 @@
   <app-card
     cardTitle="Make a Transfer"
     cardImage="../../assets/images/icons/arrows.png"
+    cardType="transfer"
   ></app-card>
   <app-card
+    cardType="transaction"
     cardTitle="Recent Transactions"
     cardImage="../../assets/images/icons/briefcase.png"
   ></app-card>
