--- a/src/app/card-container/card/card.component.html
+++ b/src/app/card-container/card/card.component.html
@@ -5,5 +5,7 @@
     </div>
     <div class="card-header-title">{{ cardTitle }}</div>
   </div>
-  <div class="card-content"></div>
+  <div class="card-content" *ngIf="cardType === 'transfer'">
+    <app-transfer></app-transfer>
+  </div>
 </div>
