Added a transfer interface, an account model, and an account service. Accounts cannot be overdrawn more than 00 and the pop up modal is complete.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,10 @@
 <div class="bg">
-  <app-modal *ngIf="modal == true"></app-modal>
+  <app-modal
+    *ngIf="modal == true"
+    [fromAccount]="fromAccount"
+    [toAccount]="toAccount"
+    [amount]="amount"
+  ></app-modal>
   <app-navbar></app-navbar>
   <app-card-container></app-card-container>
 </div>
