--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -2,9 +2,9 @@
   <div class="modal-message">
     <div class="modal-header">Please Confirm</div>
     <div class="modal-content">
-      <p>From:</p>
-      <p>To:</p>
-      <p>Amount:</p>
+      <p>From: {{ fromAccount }}</p>
+      <p>To: {{ toAccount }}</p>
+      <p>Amount: {{ amount | currency: "USD":"symbol":"1.2-2" }}</p>
     </div>
     <div class="modal-buttons">
       <button class="btn btn-transfer" (click)="onTransfer()">Transfer</button>
