Added transactions, transaction, and search components.

--- a/src/app/card-container/card-container.component.html
+++ b/src/app/card-container/card-container.component.html
@@ -5,7 +5,7 @@
     cardType="transfer"
   ></app-card>
   <app-card
-    cardType="transaction"
+    cardType="transactions"
     cardTitle="Recent Transactions"
     cardImage="../../assets/images/icons/briefcase.png"
   ></app-card>
