--- a/src/app/card-container/card/card.component.html
+++ b/src/app/card-container/card/card.component.html
@@ -8,4 +8,7 @@
   <div class="card-content" *ngIf="cardType === 'transfer'">
     <app-transfer></app-transfer>
   </div>
+  <div class="card-content" *ngIf="cardType === 'transactions'">
+    <app-transactions></app-transactions>
+  </div>
 </div>
