--- a/src/app/transactions/transactions.component.html
+++ b/src/app/transactions/transactions.component.html
@@ -1,4 +1,6 @@
 <div class="transactions">
   <app-search></app-search>
-  <app-transaction></app-transaction>
+  <div *ngFor="let t of test">
+    <app-transaction [transaction]="t"></app-transaction>
+  </div>
 </div>
