Made changes to responsive behavior. Still needs more work.

--- a/src/app/transactions/transactions.component.css
+++ b/src/app/transactions/transactions.component.css
@@ -1,4 +1,12 @@
 .transactions {
   margin-top: 10px;
-  width: 700px;
+  width: 100%
+}
+
+@media only screen and (max-width: 600px) {
+  .transactions{
+    width: 270px;
+  }
+
+
 }
