--- a/src/app/transactions/transaction/transaction.component.css
+++ b/src/app/transactions/transaction/transaction.component.css
@@ -48,3 +48,31 @@ img {
   margin-left: auto;
   margin-right: 15px;
 }
+
+
+@media only screen and (max-width: 600px) {
+  img {
+    display: none;
+  }
+  .merchant-logo{
+
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .amount{
+    font-size: 13px;
+  }
+
+  .merchant{
+    width: 100px;
+    font-size: 14px;
+    overflow: hidden;
+    white-space: nowrap;
+
+  }
+
+  .transaction-date{
+    font-size: 13px;
+  }
+
+}
