--- a/src/app/transactions/search/search.component.html
+++ b/src/app/transactions/search/search.component.html
@@ -1,1 +1,9 @@
-<p>search works!</p>
+<div class="search">
+  <div class="search-bar">
+    <input type="text" placeholder="Search by typing..." onfocus="this.placeholder = ''" onblur="this.placeholder='Search by typing...'">
+  </div>
+    <div class="sort-by">Sort by</div>
+    <button class="sort-btn" (click)="sortBy('date')">DATE {{active=='date' ? order : ''}}</button>
+    <button class="sort-btn" (click)="sortBy('beneficiary')">BENEFICIARY {{active=='beneficiary' ? order : ''}}</button>
+    <button class="sort-btn" (click)="sortBy('amount')">AMOUNT {{active=='amount' ? order : ''}}</button>
+</div>
