Connected buttons and search input to the transaction service. Next step is creating the filters for sorting.

--- a/src/app/transactions/transactions.component.html
+++ b/src/app/transactions/transactions.component.html
@@ -1,4 +1,5 @@
 <div class="transactions">
+  {{ sortBy }} {{ oderBy }} {{ searchBy }}
   <app-search></app-search>
   <div *ngFor="let t of test">
     <app-transaction [transaction]="t"></app-transaction>
