--- a/src/app/transactions/search/search.component.css
+++ b/src/app/transactions/search/search.component.css
@@ -1,6 +1,7 @@
-.search{
+.search {
   margin-bottom: 20px;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
 }
 
@@ -9,19 +10,24 @@ input {
   border: none;
   border-bottom: 1px solid rgb(149, 160, 171, 0.5);
   width: 100%;
+  margin-bottom: 15px;
 }
 
 input:focus {
   outline: none;
 }
 
-.sort-by{
+.sort {
   margin-left: auto;
- font-size: 15px;
- margin-right: 15px;
+  display: flex;
 }
 
-.sort-btn{
+.sort-by {
+  font-size: 15px;
+  margin-right: 15px;
+}
+
+.sort-btn {
   background-color: white;
   border: solid 1px rgb(193, 193, 193);
   cursor: pointer;
