--- a/src/app/transactions/search/search.component.html
+++ b/src/app/transactions/search/search.component.html
@@ -1,9 +1,24 @@
 <div class="search">
   <div class="search-bar">
-    <input type="text" placeholder="Search by typing..." onfocus="this.placeholder = ''" onblur="this.placeholder='Search by typing...'">
+    <input
+      type="text"
+      placeholder="Search by typing..."
+      onfocus="this.placeholder = ''"
+      onblur="this.placeholder='Search by typing...'"
+      [(ngModel)]="search"
+      (keyup)="searchBy()"
+    />
   </div>
+  <div class="sort">
     <div class="sort-by">Sort by</div>
-    <button class="sort-btn" (click)="sortBy('date')">DATE {{active=='date' ? order : ''}}</button>
-    <button class="sort-btn" (click)="sortBy('beneficiary')">BENEFICIARY {{active=='beneficiary' ? order : ''}}</button>
-    <button class="sort-btn" (click)="sortBy('amount')">AMOUNT {{active=='amount' ? order : ''}}</button>
+    <button class="sort-btn" (click)="sortBy('date')">
+      DATE {{ active == "date" ? order : "" }}
+    </button>
+    <button class="sort-btn" (click)="sortBy('beneficiary')">
+      BENEFICIARY {{ active == "beneficiary" ? order : "" }}
+    </button>
+    <button class="sort-btn" (click)="sortBy('amount')">
+      AMOUNT {{ active == "amount" ? order : "" }}
+    </button>
+  </div>
 </div>
