Connected the transfer and transaction component. After a transfer is complete it is now added to the recent transaction list.

--- a/src/app/transactions/transactions.component.html
+++ b/src/app/transactions/transactions.component.html
@@ -1,7 +1,7 @@
 <div class="transactions">
   {{ sortBy }} {{ oderBy }} {{ searchBy }}
   <app-search></app-search>
-  <div *ngFor="let t of test">
-    <app-transaction [transaction]="t"></app-transaction>
+  <div *ngFor="let d of data">
+    <app-transaction [transaction]="d"></app-transaction>
   </div>
 </div>
