Added search and sorting functionality. Need to change the search filter to prevent it from looking through the merchantLogos.

--- a/src/app/transactions/transactions.component.html
+++ b/src/app/transactions/transactions.component.html
@@ -1,7 +1,6 @@
 <div class="transactions">
-  {{ sortBy }} {{ oderBy }} {{ searchBy }}
   <app-search></app-search>
-  <div *ngFor="let d of data">
+  <div *ngFor="let d of data | orderBy: order:reverse:true | filter: searchBy">
     <app-transaction [transaction]="d"></app-transaction>
   </div>
 </div>
