--- a/src/app/transactions/search/search.component.html
+++ b/src/app/transactions/search/search.component.html
@@ -8,6 +8,7 @@
       [(ngModel)]="search"
       (keyup)="searchBy()"
     />
+    <button class="btn-close" (click)="clear()">X</button>
   </div>
   <div class="sort">
     <div class="sort-by">Sort by</div>
