Revised code. Made minor changes to the design. Added comments.

--- a/src/app/card-container/card-container.component.html
+++ b/src/app/card-container/card-container.component.html
@@ -1,9 +1,11 @@
 <div class="card-container">
+  <!-- card component has 3 @Inputs -->
   <app-card
     cardTitle="Make a Transfer"
     cardImage="../../assets/images/icons/arrows.png"
     cardType="transfer"
   ></app-card>
+  <!-- card component has 3 @Inputs -->
   <app-card
     cardType="transactions"
     cardTitle="Recent Transactions"
