--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,6 @@
+/* Responsive Background */
 .bg {
   background-image: url(../../assets/images/background/background.jpg);
-
   min-height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
