Made a few changes to responsive behavior after opening the application on my phone. Chrome inspect is not always accurate.

--- a/src/app/transactions/search/search.component.css
+++ b/src/app/transactions/search/search.component.css
@@ -76,8 +76,12 @@ button:hover {
     width: 80%;
   }
   .sort {
+    align-self: center;
     margin-top: 15px;
     margin-left: 0;
+  }
+  .sort-by {
+    display: none;
   }
 }
 
