--- a/src/app/transfer/transfer.component.html
+++ b/src/app/transfer/transfer.component.html
@@ -6,6 +6,7 @@
       <!-- Disabled input displaying an account and balance.
       Uses a data pipe and updates as the account drains. -->
       <input
+        class="disabledInput"
         type="text"
         id="fromAccount"
         placeholder="{{ account.accountName }} - {{
